--- a/superdumb.html
+++ b/superdumb.html
@@ -46,7 +46,7 @@
 	text-align:center;
 }</style>
 
-			<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js' type='text/javascript'></script> 
+			<script src='more.js' type='text/javascript'></script> 
 
 		<script src='script.js' type='text/javascript'></script> 
 
